# anima-ai

./: .gitattributes  .gitignore  CLAUDE.md  PROJECT.md  pyproject.toml
.claude/: cofounder.local.md
.github/workflows/: ci.yml  golden-container.yml  goldens.yml
docker/: golden.Dockerfile
docs/: scene-graph-contract.md
docs/cofounder/: COFOUNDER_PERSONA.md  DECISIONS.md  LEARNINGS.md  ROADMAP.md  tasks.json
docs/cofounder/specs/: data-model.md  feasibility-report.md  go-to-market.md  non-functional-requirements.md  product-spec.md  technical-architecture.md  ux-design-spec.md
docs/cofounder/specs/tasks/: agent-docs-surface.json  agent-repair-harness.json  animation-system.json  chapter-project-structure.json  cli-framework.json  cli-inspect-preview.json  cookbook-examples.json  crude-pack.json  docs-site-context7.json  flat-pack.json  font-bundling.json  fresh-agent-test.json  geometry-resolver.json  golden-image-harness.json  launch-assets-posts.json  longform-pipeline-proof.json  map-camera-state.json  map-geometry-foundation.json  map-mini-episode.json  map-node-types.json  map-verify-rules.json  pack-pluggability-proof.json  paint-primitives.json  parallel-scene-render.json  performance-nfr-targets.json  phase1-determinism-e2e.json  pypi-name-and-publish.json  repo-scaffold-ci.json  scene-graph-model.json  seeded-rng-service.json  skia-rasterizer-cache.json  (+9 more)
docs/manifests/: historical_basemaps_checksums.json  natural_earth_checksums.json
graphify-out/: .cofounder-graph-manifest.json  graph.json
requirements/: build-linux.txt  lock-linux.txt  lock-macos.txt  lock-windows.txt
scripts/: build_map_data.py  fetch_map_sources.py  map_sources.lock.json
src/anima/: __init__.py  _version.py  rng.py
src/anima/data/: __init__.py  builder.py  catalog.json  projections.py  simplification.py  territory_index.py  vendored.py
src/anima/geometry/: __init__.py  resolver.py
src/anima/maps/: __init__.py  base.py  dataset_registry.py  territory.py
src/anima/scene_graph/: __init__.py  _validation.py  codec.py  errors.py  model.py  nodes.py  values.py
src/anima/testing/: __init__.py  fixtures.py  goldens.py  pixelcompare.py  registry.py
tests/: conftest.py  test_ci_workflow.py  test_fonts.py  test_package.py  test_seeded_rng.py  test_socket_guard.py
tests/golden/: manifest.json  test_baseline.py  test_cli.py  test_compare.py  test_goldens_workflow.py
tests/integration/maps/: __init__.py  test_adjacent_country_topology.py  test_historical_validity.py  test_offline_wheel_install.py  test_vendored_data.py  test_wheel_policy.py
tests/scene_graph/: conftest.py  test_json_contract.py  test_model.py  test_nodes.py  test_ordering.py  test_serialization.py  test_validation.py
tests/scene_graph/fixtures/: project-v1.0.json
tests/unit/maps/: __init__.py  test_data_builder.py  test_projections.py  test_territory_index.py  test_topology_simplification.py  test_vendored_loader.py
tools/: generate_font_attribution.py
(+7 files in other folders)
